name:                jdbt
version:             0.0.1.0
synopsis:            DB helper
license:             GPL-3
author:              Clément Delafargue
maintainer:          clement@delafargue.name
build-type:          Simple
cabal-version:       >=1.8

Executable jdbt
  Ghc-Options:         -Wall
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:    base >= 4,
                    text >= 1,
                    bytestring >= 0.10,
                    time >= 1.4,
                    unordered-containers >= 0.2,
                    vector >= 0.10,
                    optparse-applicative >= 0.7,
                    toml >= 0.0.0
